feat: add chat functionality with WebSocket support
- Implement ChatController for fetching chat message history.
- Create ChatWebSocketController for handling real-time chat messages.
- Add RateLimitFilter to limit API requests based on endpoint type.
- Create database migration for chat_messages table.
- Add HTTP request examples for user registration and login.
- Implement project-related HTTP requests for team and project management.
- Add environment configuration for API and WebSocket URLs in UI.
- Create chat API service for fetching messages.
- Implement in-memory token store for JWT management.
- Add ErrorBoundary component for error handling in UI.
- Create ProtectedRoute component to guard routes based on authentication.
- Develop ChatPanel component for displaying and sending chat messages.
- Implement useChat hook for managing chat state and WebSocket connection.