@@ -1,21 +1,24 @@
 package com.collabflow.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.*;
-import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
+
     @Bean
-    public CorsFilter corsFilter() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // ✅ Your frontend origin
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
 
         // ✅ Allow sending cookies (required for refresh token)
         config.setAllowCredentials(true);
@@ -23,9 +26,8 @@ public class CorsConfig {
         // ✅ Allowed methods
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
 
-
-        // ✅ Allowed headers
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        // ✅ Allowed headers (includes Upgrade for WebSocket handshake)
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Upgrade", "Connection"));
 
         // ✅ Expose headers (optional but can help debugging)
         config.setExposedHeaders(List.of("Authorization"));
@@ -33,6 +35,6 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
-        return new CorsFilter(source);
+        return source;
     }
 }
